--- a/Site_latiq.html
+++ b/Site_latiq.html
@@ -656,8 +656,10 @@
                 </div>
                 <div class="about-image">
                     <!-- Imagem ilustrativa - em um site real, substituir por imagem real -->
-                    <div style="width: 100%; height: 400px; background: linear-gradient(135deg, var(--primary) 0%, var(--accent) 100%); display: flex; align-items: center; justify-content: center; color: white; font-size: 1.5rem;">
-                        <i class="fas fa-atom" style="font-size: 5rem;"></i>
+                    <div style="width: 100%; height: 80%; background: linear-gradient(135deg, var(--primary) 0%, var(--accent) 100%); display: flex; align-items: center; justify-content: center; color: white; font-size: 1.5rem;">
+                        <img src="imagens/Screenshot_20251114_094644_Instagram.jpg" alt="" style="width: 100%; height: 100%;">
+                      
+
                     </div>
                 </div>
             </div>
