--- a/index.html
+++ b/index.html
@@ -955,7 +955,7 @@
             <!-- Membro 2 -->
             <div class="team-member" style="background: white; border-radius: 10px; overflow: hidden; box-shadow: 0 5px 15px rgba(0,0,0,0.1); transition: transform 0.3s;">
                 <div class="member-photo" style="height: 300px; background: linear-gradient(135deg, #1a237e 0%, #00b0ff 100%); display: flex; align-items: center; justify-content: center; color: white; font-size: 4rem;">
-                    <img src="imagens/fotoprofMarcelo2.jpg" style = "width: 100%; height: 100%;">
+                    <img src="imagens/Foto Marcelo Palestrante VIII.jpg" style = "width: 100%; height: 100%;">
                     
                 </div>
                 <div class="member-info" style="padding: 25px; text-align: center;">
